--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -23,15 +23,17 @@
               {{ loadedPlaces[0].description }}
             </p>
           </ion-card-content>
+          <div></div>
+          <ion-button  fill="clear" color="primary"  routerDirection="backward"  [routerLink]="['/' , 'places' , 'tabs' , 'discover' , loadedPlaces[0].id]"> More </ion-button>
         </ion-card>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" text-center>
         <ion-list>
-          <ion-item *ngFor="let  Place of loadedPlaces.slice(1)">
+          <ion-item *ngFor="let  Place of loadedPlaces.slice(1)"  [routerLink]="['/' , 'places' , 'tabs' , 'discover' , Place.id]" routerLinkActive="router-link-active"  detail  >
             <ion-thumbnail slot="start">
-              <ion-img [src]="Place.imageUrl" ></ion-img>
+              <ion-img [src]="Place.imageUrl"></ion-img>
             </ion-thumbnail>
             <ion-label>
               <h2>
